// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar should expose reset methods 1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should not start scrolling when content width > wrap width  1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should not start scrolling when content width > wrap width and props scrollable is false   1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content rc-ellipsis"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should render ReactNode icon correct 1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <i
      class="rc-badge__wrapper van-icon van-icon-cart-o"
      style="color: rgb(25, 137, 250);"
    />
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should render left icon correct 1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <i
      class="rc-badge__wrapper rc-notice-bar__left-icon van-icon van-icon-speaker-s"
    />
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should render right icon correct 1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
    speaker-s
  </div>
</div>
`;

exports[`NoticeBar should start scrolling when content width > wrap width  1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 0s;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar should start scrolling when content width > wrap width and props scrollable is true 1`] = `
<div>
  <div
    class="rc-notice-bar"
    role="alert"
  >
    <div
      class="rc-notice-bar__wrap"
    >
      <div
        class="rc-notice-bar__content"
        style="transition-duration: 1.6666666666666667s; transform: translateX(-100px);"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;
